---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useStore } from '@builder.io/qwik';

export const App = component$(() => {
    function hola() {
        console.log('hola');
    }
    return (
        <>
            <button onClick$={hola}>Hello Qwik</button>
        </>
    );
});

============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./app_component_ckepmxzlub0"), "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"AACA;;AAEA,OAAO,MAAM,oBAAM,wGAShB\"}")
============================= app_component_ckepmxzlub0.js (ENTRY POINT)==

import { Fragment as _Fragment } from "@builder.io/qwik/jsx-runtime";
import { jsx as _jsx } from "@builder.io/qwik/jsx-runtime";
export const App_component_ckEPmXZlub0 = ()=>{
    function hola() {
        console.log('hola');
    }
    return /*#__PURE__*/ _jsx(_Fragment, {
        children: /*#__PURE__*/ _jsx("button", {
            onClick$: hola,
            children: "Hello Qwik"
        })
    }, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;yCAG8B,IAAM;IAChC,SAAS,OAAO;QACZ,QAAQ,GAAG,CAAC;IAChB;IACA,qBACI;kBACI,cAAA,KAAC;YAAO,UAAU;sBAAM;;;AAGpC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "app_component_ckepmxzlub0",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    90,
    255
  ]
}
*/
== DIAGNOSTICS ==

[]
